update subcommand list to fix build error
change from List.of to Arrays.asList, which allows a mutable list and prevents NullPointerExceptions